# fin_db

./: .gitattributes  .gitignore  README.md  pyproject.toml
db/: .env.example  README.md  docker-compose.yaml  schema.dbml
db/docker/: Dockerfile  README.md  restore.sh
db/initial_setup/: equities_final.csv  setup.ipynb  setup_equities.ipynb
db/migrations/: 000_bootstrap.sql  001_initial_schema.sql  002_first_ingest.sql  003_canonical_view.sql  004_reorg_tickers.sql  005_add_unit_support.sql  006_support_currency_change.sql  007_portfolio_support.sql  README.md  run.sh
db/ops/: .env.example  README.md  backup.sh  docker-compose.yaml  pgbackrest.conf  restore.sh
db/sandbox/: README.md  run.sh  sandbox.sql  template.sql
initial_setup/: equities_final.csv  etoro_ticker_mapper.csv  setup_equities.ipynb
scripts/: daily_ingest.py  yfin_ingest.py
src/fin_db/: __init__.py  constants.py  session.py
src/fin_db/helpers/: __init__.py  instrument_id.py  logger.py  telebot.py  utils.py
src/fin_db/providers/: __init__.py  etoro.py  lseg_puller.py  yfinance.py
src/fin_db/pullers/: __init__.py  yfin_puller.py
src/fin_db/queries/: __init__.py  execute.py  instrument_id_mapping.sql  log_updates.sql  updates_list.sql  write_instruments.sql  write_observations.sql
src/fin_db/queries/read/: check_updates.sql  updates_list.sql  usd_ts.sql
src/fin_db/queries/write/: refresh_portfolios.sql  write_attributes.sql  write_fails.sql  write_identifiers.sql  write_observations.sql  write_updates.sql
tests/: test.py
